# TwelveAdapter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_COMPLETE.md  FINAL_SUMMARY.md  LICENSE  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PROJECT_SUMMARY.md  PUBLISHING_GUIDE.md  PYPI_PUBLISHED.md  PYPI_PUBLISHING_CHECKLIST.md  QUICK_REFERENCE.md  README.md  README_USAGE.md  RELEASE_CHECKLIST.md  TESTING_COMPLETE.md  TESTING_COMPLETE_UPDATED.md  example_config.py  example_strategy.py  main.py  pyproject.toml  run_tests.py  setup.py  simple_example.py  test-api.sh  test_adapter.py  test_adapter_structure.py  test_final.py  test_full_adapter.py  test_python.py  test_python_bindings.py
crates/nautilus-twelvedata/: Cargo.toml  README.md
crates/nautilus-twelvedata/examples/: fetch-bars.rs
crates/nautilus-twelvedata/src/: config.rs  data.rs  lib.rs
crates/nautilus-twelvedata/src/common/: consts.rs  error.rs  mod.rs  symbol.rs
crates/nautilus-twelvedata/src/http/: client.rs  mod.rs  models.rs
crates/nautilus-twelvedata/src/python/: mod.rs
examples/: advanced_analysis.py  basic_usage.py
nautilus_trader/adapters/twelvedata/: __init__.py  config.py  constants.py  data.py  factories.py  providers.py
python/: __init__.py
python/nautilus_twelvedata/: __init__.py
tests/: conftest.py  test_mocked.py  test_twelvedata.py
tests/data/: aapl_1h_sample.json
