[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nautilus-twelvedata"
version = "0.1.5"
description = "High-performance TwelveData adapter for NautilusTrader"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "LGPL-3.0-only"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["trading", "finance", "nautilus-trader", "twelvedata", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "nautilus-trader>=1.230.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.12",
]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/greenstephen/TwelveAdapter"
Documentation = "https://github.com/greenstephen/TwelveAdapter#readme"
Repository = "https://github.com/greenstephen/TwelveAdapter"
Changelog = "https://github.com/greenstephen/TwelveAdapter/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
strip = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: mark test as integration test requiring live API"
]

[tool.coverage.run]
source = ["nautilus_twelvedata"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
